@@ -45,6 +45,7 @@
 <div class="control-group">
   <%= f.label :urm_types, "Under-Represented Minority", class: 'control-label' %>
   <div class="controls checkbox">
+    <%= hidden_field_tag :set_urm_types, '1' %>
     <% Applicant::URM_TYPES.each do |name, value| %>
       <%= check_box_tag "applicant[urm_types][]", value, applicant.urm_types.include?(value) %> <label><%= name %></label>
     <% end %>
