@@ -36,8 +36,27 @@
 </div>
 
 <div class="control-group">
+  <%= f.label :degrees_earned, nil, class: 'control-label' %>
+  <div class="controls">
+    <div id="degrees_container">
+      <%= hidden_field_tag :set_degrees_earned, '1' %>
+      <% if applicant.degrees_earned.size == 0 %>
+        <%= render partial: 'applicants/form/degrees', locals: { degree_earned: {} } %>
+      <% end %>
+      <% applicant.degrees_earned.each do |degree_earned| %>
+        <%= render partial: 'applicants/form/degrees', locals: { degree_earned: degree_earned } %>
+      <% end %>
+    </div>
+
+    <%= link_to 'add more', add_degree_applicants_path, method: :post, remote: true, class: 'btn btn-mini' %>
+  </div>
+
+</div>
+
+<div class="control-group">
   <%= f.label :degree_types, nil, class: 'control-label' %>
   <div class="controls checkbox">
+    <%= hidden_field_tag :set_degree_types, '1' %>
     <% Applicant::DEGREE_TYPES.each do |name, value| %>
       <label><%= check_box_tag "applicant[degree_types][]", value, applicant.degree_types.include?(value) %> <%= name %></label>
     <% end %>
@@ -45,9 +64,9 @@
 </div>
 
 <div class="control-group">
-  <%= f.label :degrees_earned, nil, class: 'control-label' %>
+  <%= f.label :degrees_earned_old, nil, class: 'control-label' %>
   <div class="controls">
-    <%= f.text_area :degrees_earned, rows: 7, style: "width:95%" %>
+    <%= f.text_area :degrees_earned_old, rows: 7, style: "width:95%" %>
     <span class="help-block"><i>Degree Earned, Institution, and Year of Graduation</i>
     </span>
   </div>
@@ -100,6 +119,7 @@
 <div class="control-group">
   <%= f.label :research_interests, nil, class: 'control-label' %>
   <div class="controls">
+    <%= hidden_field_tag :set_research_interests, '1' %>
     <% Applicant::RESEARCH_INTERESTS.each_with_index do |(name, value), index| %>
       <% unless value == 'other' %>
         <label class="checkbox inline" style="<%= 'margin-left:10px' if index == 0 %>"><%= check_box_tag "applicant[research_interests][]", value, applicant.research_interests.include?(value) %> <%= name %></label>
