@@ -1,0 +1,11 @@
+<%= Applicant.degree_type_name(degree_earned[:degree_type]) %>
+
+<%= degree_earned[:institution] %>
+
+<%= degree_earned[:year] %>
+
+<%= degree_earned[:advisor] %>
+
+<%= degree_earned[:thesis] %>
+
+<%= degree_earned[:concentration_major] %>
