@@ -11,6 +11,8 @@
   * Applicant form no longer requires duplicate entry of citizenship status
   * Administrators can request an exit interview to be completed by enrolled trainees
   * Applicants are required to add research interests
+  * Multiple degrees can be added to applicants
+    * Degree Type, Institution, Year, Advisor, Thesis, and Concentration / Major
   * Minor layout changes
 
 == 0.4.2
